# mahmoudashraf.dev

./: .dockerignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  Dockerfile  README.md  biome.json  compose.yaml  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.github/workflows/: build-and-push-images.yml  build.yml  deploy.yml
config/: urls.py
config/django/: base.py  prod.py
config/settings/: celery.py  django_allauth.py  wagtail.py
nginx/: site.conf
public/: site.webmanifest
src/base/: logging.py  middleware.py
src/guestbook/: models.py  tasks.py  utils.py  views.py
src/guestbook/migrations/: 0015_alter_guestbook_message.py
src/resources/css/: admin.css  app.css  fonts.css  utils.css
src/resources/js/: guestbook-editor.ts
src/templates/: base.html
src/templates/account/: profile.html
src/templates/guestbook/: guestbook_form_page.html  guestbook_index_page.html
src/templates/includes/: contact_form.html  header.html
src/webmentions/migrations/: 0003_alter_bookmarkwebmention_options_and_more.py
