[project]
name = "maw-sh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.13.4,<5",
  "bleach>=6.3.0,<7",
  "boto3>=1.42.49,<2",
  "celery[redis]>=5.6.2,<6",
  "django>=5.2.11,<6",
  "django-allauth[socialaccount]>=65.14.3,<66",
  "django-celery-beat>=2.8.1,<3",
  "django-celery-email-reboot>=4.2.0,<5",
  "django-celery-results>=2.6.0,<3",
  "django-comments-xtd>=2.10.11,<3",
  "django-csp>=4.0,<5",
  "django-debug-toolbar>=6.2.0,<7",
  "django-health-check>=4.0.0,<5",
  "django-htmx>=1.27.0,<2",
  "django-permissions-policy>=4.28.0,<5",
  "django-polymorphic>=4.11.0,<5",
  "django-redis>=6.0.0,<7",
  "django-simple-captcha>=0.6.3,<1",
  "django-storages[s3]>=1.14.6,<2",
  "django-template-partials>=25.3,<26",
  "django-vite>=3.1.0,<4",
  "environs[django]>=14.5.0,<15",
  "gunicorn>=25.1.0,<26",
  "markdown>=3.10.2,<4",
  "pillow>=12.1.1,<13",
  "psutil>=7.2.2,<8",
  "psycopg[binary]>=3.3.2,<4",
  "python-json-logger>=4.0.0,<5",
  "requests>=2.32.5,<3",
  "wagtail==7.2.2",
  "wagtail-seo>=3.1.1,<4",
  "wagtailmedia>=0.17.2,<1",
  "wagtailmenus>=4.0.6,<5",
  "wand>=0.6.13,<1",
]

[dependency-groups]
dev = [
  "debugpy>=1.8.20,<2",
  "django-stubs-ext>=5.2.9,<6",
  "django-types>=0.23.0,<1",
  "djlint>=1.36.4,<2",
  "pre-commit>=4.5.1,<5",
  "ruff>=0.15.1,<1",
]

[tool.djlint]
profile = "django"
format_attribute_template_tags = true
indent = 2
line_break_after_multiline_tag = true
max_line_length = 100
preserve_blank_lines = true
custom_blocks = "link,button,partialdef,partial,field,wagtailcache,wagtailpagecache"

[tool.pyright]
venvPath = "."
venv = ".venv"
reportAssignmentType = "none"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
  "F",  # Pyflakes rules
  "W",  # PyCodeStyle warnings
  "E",  # PyCodeStyle errors
  "I",  # Sort imports properly
  "UP",  # Warn if certain things can changed due to newer Python versions
  "C4",  # Catch incorrect use of comprehensions, dict, list, etc
  "FA",  # Enforce from __future__ import annotations
  "ISC",  # Good use of string concatenation
  "ICN",  # Use common import conventions
  "RET",  # Good return practices
  "SIM",  # Common simplification rules
  "TID",  # Some good import practices
  "TC",  # Enforce importing certain types in a TYPE_CHECKING block
  "PTH",  # Use pathlib instead of os.path
  "TD",  # Be diligent with TODO comments
  "NPY",  # Some numpy-specific things
]
